Bug 432032 - Check for X-Plasma-StandAloneApp seems to be inverted while searching for windowed widgets
Summary: Check for X-Plasma-StandAloneApp seems to be inverted while searching for win...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Search widget (other bugs)
Version First Reported In: 5.20.90
Platform: Arch Linux Other
: NOR normal
Target Milestone: 1.0
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-24 12:40 UTC by Kishore Gopalakrishnan
Modified: 2021-01-24 13:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2021-01-24 12:40:55 UTC
SUMMARY
It seems plasma apps have a property 'X-Plasma-StandAloneApp' in the metadata.desktop file that decides whether they appear in the krunner search for Windowed widgets. As of Plasma 5.20.90 (5.21 beta), checking for this property seems to be inverted, in that apps marked as standalone do not appear in the krunner search, while apps not marked as standalone do appear in the search.

STEPS TO REPRODUCE
1. Open krunner
2. Type 'timer'
3. Clear textbox
4. Type 'trash'

OBSERVED RESULT
The 'org.kde.plasma.timer' widget does not appear in the results after step 2. But after step 4, the 'org.kde.plasma.trash' applet appears.

EXPECTED RESULT
'org.kde.plasma.timer' -> Should appear in the results (.desktop file has 'X-Plasma-StandAloneApp=true')
'org.kde.plasma.trash' -> should not appear in the results (not marked as standalone app)
This was the behaviour in 5.20.5, IIRC.

ADDITIONAL INFORMATION
1. See bug 345851 where the standalone property is described. 
2. I can launch the applets by typing 'plasmawindowed <applet_name>' in the terminal.
3. It was working properly in Plasma 5.20.5.
4. I wasn't sure whether to report this against krunner or plasmashell, but I am reporting it here as it appeared immediately after the 5.20.90 update.
5. Manually editing 'org.kde.plasma.timer/metadata.desktop' and removing the 'X-Plasma-StandAloneApp=true' line makes it appear in the krunner search results.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.90
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.9-arch1-1
Comment 1 Alexander Lohnau 2021-01-24 13:15:04 UTC
Git commit eab3f6c56f6eb2162683fecf69f3f9d4620630cd by Alexander Lohnau.
Committed on 24/01/2021 at 13:12.
Pushed by alex into branch 'master'.

Fix condition for windowed widgets standalone mode
FIXED-IN: 5.21

M  +1    -1    runners/windowedwidgets/windowedwidgetsrunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/eab3f6c56f6eb2162683fecf69f3f9d4620630cd
Comment 2 Alexander Lohnau 2021-01-24 13:15:51 UTC
Git commit 6318f518dff906b2aee3c338330add01b5a71dff by Alexander Lohnau.
Committed on 24/01/2021 at 13:15.
Pushed by alex into branch 'Plasma/5.21'.

Fix condition for windowed widgets standalone mode
FIXED-IN: 5.21
(cherry picked from commit eab3f6c56f6eb2162683fecf69f3f9d4620630cd)

M  +1    -1    runners/windowedwidgets/windowedwidgetsrunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6318f518dff906b2aee3c338330add01b5a71dff