Fix condition for windowed widgets standalone mode

BUG: 432032
FIXED-IN: 5.21